[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/powerup.gd" type="Script" id=1]
[ext_resource path="res://assets/game/powerups.png" type="Texture" id=2]
[ext_resource path="res://assets/font/Squares Bold Free.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/game/shine_particle.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/powerup.wav" type="Sample" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, -15, 14, -4, 8, 14, -8, 14, -14, -4 )

[sub_resource type="DynamicFont" id=2]

font/size = 13
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=3]

resource/name = "despawning"
length = 3.0
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "picked_up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pickup_text:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pickup_text:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -51, -7 ), Vector2( -51, -45 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sound:play/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "powerup" ]
}

[sub_resource type="ColorRamp" id=5]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0.925781, 0.911316, 0.694336, 1, 0.457031, 0.457031, 0.457031, 0 )

[sub_resource type="SampleLibrary" id=6]

samples/powerup = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="powerup" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="pickup_text" type="Label" parent="."]

visibility/self_opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -51.0
margin/top = -7.0
margin/right = 51.0
margin/bottom = 9.0
custom_fonts/font = SubResource( 2 )
text = "Health Up"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/despawning = SubResource( 3 )
anims/picked_up = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="despawn_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = true

[node name="pickup_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 5
config/lifetime = 1.5
config/process_mode = 1
config/half_extents = Vector2( 15, 15 )
config/texture = ExtResource( 4 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.3
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 5 )

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="area_enter" from="." to="." method="_on_powerup_area_enter"]

[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]

[connection signal="timeout" from="pickup_timer" to="." method="_on_pickup_timer_timeout"]


